--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,8 +54,8 @@
                 = image_tag "landing/slideshow-3.png"
                 .carousel-caption.offset1
                   %p
-                    \... and provide our feedback. Teachers get a detailed picture of how an individual 
-                    student is doing on a specific topic
+                    \... and provide our feedback. Teachers get a detailed picture of how well individual 
+                    students are doing on a specific topics
             %a.carousel-control.left{ :href => "#how-it-works", 'data-slide' => :prev }
               \&lsaquo;
             %a.carousel-control.right{ :href => "#how-it-works", 'data-slide' => :next }
