--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,17 +41,20 @@
             .carousel-inner
               .item 
                 = image_tag "landing/slideshow-1.png"
+                .attribution= "Worker designed by Kris Khoury from The Noun Project"
                 .carousel-caption.offset1
                   %p
                     Pick from our database of questions. Or send us your own to add and use 
               .item 
                 = image_tag "landing/slideshow-2.png"
+                .attribution= "Fountain Pen designed by ProletKult Graphik from The Noun Project"
                 .carousel-caption.offset1
                   %p
                     Students do their work as they normally do - with pen on paper - on 
                     their individually encoded worksheets
               .item 
                 = image_tag "landing/slideshow-3.png"
+                .attribution= "Reading designed by Adrijan Karavdic from The Noun Project"
                 .carousel-caption.offset1
                   %p
                     \... and provide our feedback. Teachers get a detailed picture of how well individual 
