--- a/app/views/menus/admin/_workbench.html.haml
+++ b/app/views/menus/admin/_workbench.html.haml
@@ -1,4 +1,6 @@
 
+-# is_admin is a boolean variable that comes from the layout file 
+
 %ul.dropdown-menu.dropdown-inverse#admin-wb{ :role => :menu }
   %li.dropdown-submenu
     %a{ :href => '#' }= 'Pending Work' 
@@ -14,10 +16,11 @@
   %li
     = simple_link :for => "Receive Scans", :id => 'lnk-wb-receive'
 
-  %li.divider
-  %li.nav-header= "Manage"
-  %li
-    = simple_link :for => "Schools", :id => 'lnk-wb-schools'
-  %li
-    = simple_link :for => "Courses", :id => 'lnk-wb-courses'
+  - if is_admin
+    %li.divider
+    %li.nav-header= "Manage"
+    %li
+      = simple_link :for => "Schools", :id => 'lnk-wb-schools'
+    %li
+      = simple_link :for => "Courses", :id => 'lnk-wb-courses'
 
