Landing page carousel graphics changed slightly

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,7 @@
 
       .row-fluid
         .hero-unit
-          #how-it-works.carousel.slide
+          #how-it-works.carousel.slide.offset1
             .carousel-inner
               .item 
                 = image_tag "landing/slideshow-1.png"
@@ -54,7 +54,7 @@
                     their individually encoded worksheets
               .item 
                 = image_tag "landing/slideshow-3.png"
-                .attribution= "Reading designed by Adrijan Karavdic from The Noun Project"
+                .attribution= "The Noun Project"
                 .carousel-caption.offset1
                   %p
                     \... and provide our feedback. Teachers get a detailed picture of how well individual 
