--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -71,7 +71,9 @@
               #schools.content.no-remove
             #left-X
             #left-2
-            #left-3
+
+          #left-3
+            = render :partial => 'examiners/tag-pending'
           #left-4
             = render :partial => 'toolbox/grd-pending'
 
