Added a new class - .leaf - to single-line and requirement
The new class identifies these elements as leaf level nodes
 during purging - even though they have child nodes of their own

--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -6,7 +6,7 @@
 -# is clicked on
 
 -# A single line entry - with mandatory text and optional subtext 
-.row-fluid.single-line
+.row-fluid.single-line.leaf
   .dropdown.span2
     %a.dropdown-toggle{ :href => '#', 'data-toggle' => :dropdown, :up => 2 }
       More ...
