--- a/app/views/toolbox/_requirement.html.haml
+++ b/app/views/toolbox/_requirement.html.haml
@@ -1,7 +1,7 @@
 
 -# requirement comes as a local from the calling partial
 
-.row-fluid.requirement{ :marker => "#{requirement.id}" }
+.row-fluid.requirement.leaf{ :marker => "#{requirement.id}" }
   .span2
     .badge= "#{requirement.posn}"
   .span10
