[tagging]: New purge-* class attributes set in partials

--- a/app/views/examiners/_tag-verticals.html.haml
+++ b/app/views/examiners/_tag-verticals.html.haml
@@ -1,11 +1,11 @@
 
 -# Left-side tabs - one per section
-#verticals-tab.tabbable.tabs-left.no-remove
-  %ul.nav.nav-tabs.span4
+#verticals-tab.tabbable.tabs-left
+  %ul.nav.nav-tabs.span4.purge-skip
     - Vertical.order(:name).each do |m|
       %li
         = simple_link :for => "#{m.name}", :toggle => :tab, :marker => "#{m.id}",
         :href => "#pane-vertical-topics", :url => "vertical/topics.json?id=:id"
 
   .tab-content.span7
-    #pane-vertical-topics.tab-pane
+    #pane-vertical-topics.tab-pane.purge-blind
