--- a/app/views/examiners/_tag-pending.html.haml
+++ b/app/views/examiners/_tag-pending.html.haml
@@ -3,10 +3,11 @@
   %li
     = simple_link :for => "Question", :href => '#pane-tag-pending', :id => 'tab-tag-pending'
   %li
-    = simple_link :for => "On Topic", :href => '#pane-tag-topic', :id => 'tab-tag-topic'
+    = simple_link :for => "On Topic", :href => '#pane-tag-topic', 
+      :id => 'tab-tag-topic', :class => 'nopurge-ever'
   %li
-    = simple_link :for => "Misc", :href => '#pane-tag-misc', :id => 'tab-tag-misc', 
-      :class => 'nopurge-ever'
+    = simple_link :for => "Misc", :href => '#pane-tag-misc', 
+      :id => 'tab-tag-misc', :class => 'nopurge-ever'
 
 .tab-content
   #pane-tag-pending.tab-pane
