--- a/app/views/examiners/_tag-misc.html.haml
+++ b/app/views/examiners/_tag-misc.html.haml
@@ -13,8 +13,7 @@
         = f.input :level, :hint => "target level", :selected => "3",
           :collection => { 'Grd < 9' => 1, '9-10' => 2, '11-12' => 3, 'University' => 4 } 
       .span2
-        = f.input :total, :collection => [*1..7], :hint => 'total parts', 
-          :selected =>"1", :input_html => { :id => 'num-subparts' }
+        = f.input :total, :collection => [*1..7], :hint => 'total parts', :input_html => { :id => 'num-subparts' }
       .span3
         = f.input :calculator, :collection => { :yes => true, :no => false }, 
           :hint => 'calculator?', :selected => :false
@@ -23,11 +22,11 @@
     - [*1..7].each do |k|
       .row-fluid.subpart-tagging
         .span1.offset1.label= "##{k}"
-        .span4
+        .span5
           = f.input :length, :input_html => { :name => "subpart[#{k}][length]" },
             :collection => {:mcq => 1, 'a few lines' => 4, 'half a page' => 2, 'full page' => 3 },
             :selected => 2
-        .span2
+        .span3
           = f.input :marks, :input_html => { :name => "subpart[#{k}][marks]" }, 
                     :collection => [*1..6], :selected => 3
 
