:role => :menu necessary for the <ul> containing the default link

--- a/app/views/students/_trigger.html.haml
+++ b/app/views/students/_trigger.html.haml
@@ -1,4 +1,4 @@
 
-%ul#st-trigger.dropdown-menu.hide
+%ul#st-trigger.dropdown-menu.hide{ :role => :menu }
   %li
     = simple_link :for => "start", :id => 'lnk-st-trigger'
