[student]: Minor bug fixes + #wide-wait added in initial view

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -38,5 +38,7 @@
             = render :partial => 'students/rc'
         #wide.g-panel.span8
           #wide-X
+          #wide-wait
+            = render :partial => 'toolbox/wait'
 
     = yield :toolbox
