[solution]: Showing solution in place to students and teachers
If the solution is shown only as a preview, then
  1. there is no need to allow PDF download - great for copyright protection
     and for not being seen as a question bank
  2. Enforcing submission from students. Only students who send scans - even if blank -
     should be able to see solutions to that quiz

--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -14,4 +14,8 @@
   #pane-tc-rc-1.tab-pane
   #pane-tc-rc-2.tab-pane
   #pane-tc-rc-3.tab-pane
+    .row-fluid.navbar.purge-skip
+      = content_tag :button, "Show Solution", { :class => 'btn btn-primary btn-large pull-right', 
+                                                :data => { :ws => 'tab-tc-rc-1', :id => 'tab-tc-rc-2', :toggle => :button },
+                                                :id => 'btn-show-solution'}
 
