--- a/app/views/students/_rc.html.haml
+++ b/app/views/students/_rc.html.haml
@@ -7,4 +7,9 @@
 
 .tab-content
   #pane-st-rc-1.tab-pane
-  #pane-st-rc-2.tab-pane.purge-blind
+  #pane-st-rc-2.tab-pane
+    .row-fluid.navbar.purge-skip
+      = content_tag :button, "Show Solution", { :class => 'btn btn-primary btn-large pull-right', 
+                                                :data => { :ws => 'tab-st-rc-1', :id => 'control-panel', :toggle => :button },
+                                                :id => 'btn-show-solution'}
+
