Changed my mind about dis-allowing teachers to download solution PDF

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -5,8 +5,8 @@
     = simple_link :for => "Make New", :id => 'lnk-wsb-new'
   %li
     = simple_link :for => "List", :id => 'lnk-wsb-existing'
-  -#%li.nav-header= "Download"
-  -#%li
+  %li.nav-header= "Download"
+  %li
     = simple_link :for => "Solution (PDF)", :id => 'lnk-download-solution', 
     :url => "#{Gutenberg['server']}/atm/:a/answer-key/downloads/answer-key.pdf"
   %li.nav-header= "Misc"
