--- a/app/views/teachers/_qzb-topics.html.haml
+++ b/app/views/teachers/_qzb-topics.html.haml
@@ -5,6 +5,10 @@
   :html => { :id => 'form-qzb-topics'} do |f|
 
   .row-fluid.navbar.purge-skip
+    .btn-group{ 'data-toggle' => 'buttons-checkbox' }
+      = simple_button :icon => 'icon-user', :as => :checkbox, :name => "filter[suggested]"
+      = simple_button :icon => 'icon-tag', :as => :checkbox, :name => "filter[liked]"
+      = simple_button :icon => 'icon-ban-circle', :as => :checkbox, :name => "filter[repeated]"
     = f.button :submit, :class => 'btn-inverse pull-right', :value => "Show Questions"
   #vert-tab.tabbable.tabs-left
     %ul.nav.nav-tabs.span4.purge-skip.nopurge-ever
