Splitting tabs vertically - as opposed to horizontally
Horizontal splitting can screw up the layout sometimes

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -605,3 +605,24 @@ select {
     margin-top: -4px ;
   } 
 } 
+
+
+li.split { 
+  text-align: center ;
+
+  > a {
+    > .row-one { 
+      font-size: 15px ;
+      padding-bottom: 9px ;
+      border-bottom: 1px solid white ;
+    }
+    > .row-two {
+      font-size: 12px ;
+      padding-top: 4px ;
+    } 
+  } 
+  &.active {
+    background-color: $lightgray ;
+  }
+} 
+
