Tightened logic for setting class and other attributes on left-tabs
The code is fugly. But it seems to work

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -128,7 +128,7 @@ $green: #57bc20 ; // rgb(87,188,32)
           &:hover { border: 1px solid white; }
         }
       } 
-      &.disabled {
+      &.disabled, &[disabled='true'] {
         > a { 
           color: $lightgray ;
           &:hover { border: 1px dashed white ; }
