--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -463,6 +463,7 @@ form.smart {
   > .nav-tabs {
     > li {
       font-size: 11px ;
+      margin-bottom: 5px ;
       &.split {
         margin-bottom: 10px ;
         > a {
