--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -43,10 +43,10 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span4{ :href => "#"}
+              %a.brand.span3{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
-                .tagline.span6.offset3= "Grades will happen"
-              %ul.nav.span8.pull-right
+                .tagline.span10.offset1= "Grades will happen"
+              %ul.nav.span8
                 -# dropdown -> Quiz -> [ new, edit, save ]
                 %li.dropdown
                   = simple_link :for => "Quizzes & Questions", :as => :dropdown, :id => 'm-teacher-quizzes'
@@ -57,7 +57,7 @@
                 %li.dropdown
                   = simple_link :as => :dropdown, 
                     :id => 'm-notifications', :icon => "icon-white icon-bell"
-                %li#cp-account-link.dropdown.pull-right
+                %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{tchr.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
