--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -49,16 +49,16 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span4{ :href => "#"}
+              %a.brand.span3{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
-                .tagline.span6.offset3= "Grades will happen"
-              %ul.nav.span8.pull-right
+                .tagline.span10.offset1= "Grades will happen"
+              %ul.nav.span8
                 %li.dropdown
                   = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-admin-wb'
                 %li.dropdown
                   = simple_link :as => :dropdown, 
                     :id => 'm-notifications', :icon => "icon-white icon-bell"
-                %li#cp-account-link.dropdown.pull-right
+                %li#cp-account-link.dropdown
                   = simple_link :for => "Hello, #{user.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
