Moved inbox to left-panel
Would stay consistent and show worksheet previews for inboxed worksheets
in the wide-panel

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -40,10 +40,11 @@
           = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
           #left-1
             = render :partial => 'students/rc'
+          #left-2
+            = render :partial => 'students/inbox'
         #middle.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-1
-            = render :partial => 'students/inbox'
         #wide.g-panel.span8
           #wide-X
           #wide-wait
