--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -519,7 +519,7 @@ form.smart {
   width: 100% ;
   .attribution {
     font-size: 10px ;
-    color: $gradians-blue ; 
+    color: $lightgray ;
     bottom: 0px ;
   } 
   .carousel-caption {
