[annotations]: Tick marks, crosses etc are now .png's overlaid on the canvas
we don't draw these things anymore. Hence, coordinate info sent via
Savon request is much simpler and shorter now

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -30,6 +30,7 @@
     = render :partial => 'menus/user/account'
     = render :partial => 'menus/admin/workbench', :locals => { :is_admin => is_admin }
     = render :partial => 'menus/user/notifications'
+    = render :partial => 'examiners/annotation-marks'
 
   
 - content_for :modals do
