--- a/app/views/toolbox/_grd-toolbar-btns.html.haml
+++ b/app/views/toolbox/_grd-toolbar-btns.html.haml
@@ -10,12 +10,12 @@
     %button.btn.btn-inverse#btn-next-scan{ :rel => :tooltip, :title => "Next Scan" }
       %i{ :class => 'icon-white icon-chevron-down' }
   .btn-group.btn-group-vertical{ 'data-toggle' => 'buttons-radio' }
-    %button.btn.btn-inverse#btn-ok{ :rel => :tooltip, :title => "Insert Tick(s)" }
+    %button.btn.btn-inverse#btn-ok{ :rel => :tooltip, :title => "Looks Good" }
       %i{ :class => 'icon-white icon-ok ' }
-    %button.btn.btn-inverse#btn-cross{ :rel => :tooltip, :title => "Insert Cross(es)" }
+    %button.btn.btn-inverse#btn-cross{ :rel => :tooltip, :title => "Wrong!" }
       %i{ :class => 'icon-white icon-remove' }
-    %button.btn.btn-inverse#btn-what{ :rel => :tooltip, :title => "Insert Exclamation Mark(s)" }
-      %i{ :class => 'icon-white icon-exclamation-sign' }
+    %button.btn.btn-inverse#btn-what{ :rel => :tooltip, :title => "How?"}
+      %i{ :class => 'icon-white icon-question-sign' }
     %button.btn.btn-inverse#btn-write{ :rel => :tooltip, :title => "Add a comment" }
       %i{ :class => 'icon-white icon-text-width' } 
     %button.btn.btn-inverse#btn-undo{ :rel => :tooltip, :title => "Undo Last" }
