Minor styling changes to #grd-toolbar-btns

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -341,6 +341,11 @@ button[data-toggle='button'] {
 
 #grd-toolbar-btns { 
   position: fixed ;
+  margin-top: 0px ;
+
+  > .btn-group-vertical { 
+    vertical-align: top ;
+  } 
 } 
 
 .btn-inverse.active { background-color: $deep-blue ; }
