[worksheet]: Allow teacher to specify that worksheet ..
.. must also be published after its been compiled

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -493,6 +493,12 @@ form.smart {
   } 
 } 
 
+.tab-content {
+  .btn-group {
+    margin-bottom: 25px ;
+  }
+} 
+
 .data-point-label {
   font: {
     size: 10px ;
@@ -625,6 +631,5 @@ select {
 
 li.split { 
   text-align: center ;
-
 } 
 
